@@ -19,21 +19,22 @@ class Smarty_Internal_Get_Include_Path {
      * Return full file path from PHP include_path
      *
      * @param string $filepath filepath
-     * @return mixed full filepath or false
+     * @return string|boolean full filepath or false
      */
     public static function getIncludePath($filepath)
     {
-        static $_path_array = null;
+        static $_include_path = null;
 
-        if(!isset($_path_array)) {
-            $_ini_include_path = ini_get('include_path');
-            $_path_array = explode(strpos($_ini_include_path,';') !== false ? ';' : ':',$_ini_include_path);
+        if ($_path_array === null) {
+            $_include_path = explode(PATH_SEPARATOR, get_include_path());
         }
-        foreach ($_path_array as $_include_path) {
-            if (file_exists($_include_path . DS . $filepath)) {
-                return $_include_path . DS . $filepath;
+
+        foreach ($_include_path as $_path) {
+            if (file_exists($_path . DS . $filepath)) {
+                return $_path . DS . $filepath;
             }
         }
+        
         return false;
     }
 
